# Info

./: docker-compose.yaml  package.json
.github/workflows/: docker-image.yml  docker.yml
NJU_IAP/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  search_RAG
NJU_IAP/backend/: run.py  test.py
NJU_IAP/information_processing/: README.md  ai_processing.py  db_importer.py  prompt_summary.txt
backend/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  ruff.toml  search_RAG.py
backend/app/: fastapi_app.py  settings.py
backend/app/routes/: __init__.py  fastapi_routes.py
backend/app/services/: ddl_service.py  query_service.py
backend/crawlers/web/: five_educations.py  mooc.py  nju_news.py  xxt.py
backend/crawlers/wechat/: api.py  crawler.py
backend/database/: README.md  create_tables.sql
backend/fast_api/: run.py  start_fastapi.py  test.py
backend/fast_api/app/: db.py
backend/fast_api/app/models/: user.py
backend/fast_api/app/services/: date_query_service.py  ddl_service.py  mcp_query_function.py  news_service.py  rag_query_function.py
backend/info_process/: ai_processing.py  db_importer.py  models.py
backend/info_process/database/: create_index.sql
backend/information_processing/: ai_processing.py  db_importer.py  prompt_filter.txt  prompt_structuring.txt
backend/test/: test.py
backend/utils/: json_util.py
frontend/: Dockerfile  components.d.ts  nginx.conf  output.txt  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/public/: service-worker.js
frontend/src/: App.vue  DatePicker.tsx  (+4 more)
(+60 files in other folders)
